ingress-nginx/ingress-quickwit.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quickwit-ingress
  namespace: quickwit
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - quickwit.onionstreasure.com
    secretName: quickwit-tls
  rules:
  - host: quickwit.onionstreasure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quickwit-service
            port:
              number: 7280
